--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Bank App-login</title>
-     <style th:href= "@{/style.css}"></style>
-     <!-- <style>
+     <link rel="stylesheet" href="" th:href="@{/style.css}">
+     <style>
           * {
                margin: 0;
                padding: 0;
@@ -65,8 +65,8 @@
                margin-bottom: 5px;
           }
 
-        
-          input[type="email"], 
+
+          input[type="email"],
           input[type="password"] {
                width: 90%;
                padding: 10px;
@@ -118,11 +118,19 @@
                color: #007bff;
                text-decoration: none;
           }
+
           a:hover {
                color: #4e9bef;
-              
+
           }
-          </style> -->
+
+          .error-message {
+               color: red;
+               font-weight: bold;
+               margin-bottom: 10px;
+               text-align: center;
+          }
+     </style>
 </head>
 <div class="main">
      <h1>Welcome to Bank Application</h1>
@@ -136,7 +144,7 @@
 
                <label for="password"> Enter Password</label>
                <input type="password" name="password" id="password" required>
-               <span >
+               <span>
                     Forgot Password? <a href="">Click Here</a>
                </span>
 
@@ -147,6 +155,9 @@
 
           </form>
           <span>Don't have Account?<a href="/register"> Register Here</a></span>
+     </div>
+     <div th:if="${error}" class="error-message">
+          Invalid username or password!
      </div>
 
 
