Added Some fetures in service layer

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -113,8 +113,10 @@
           </div>
           <div>
 
-               <a href="/transfer">Transfer Money</a>
-               <a href="/transactions"> Check Transaction History</a>
+               <a th:href= "@{/deposit}"href="">Deposit Money</a>
+               <a th:href= "@{/withdraw}" href="">Withdraw Money</a>
+               <a  th:href= "@{/transfer}" href="">Transfer Money</a>
+               <a th:href= "@{/transactions}" href=""> Check Transaction History</a>
           </div>
      </main>
 </body>
