Updated Security configues

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -97,10 +97,10 @@
                <h1>Bank Application</h1>
                <ul>
                     <!-- <li>Profile</li> -->
-                    <li><a href="/dashboard">Home</a></li>
-                    <li><a href="/transactions">Transactions</a></li>
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="" th:href= "@{/dashboard}">Home</a></li>
+                    <li><a href="" th:href= "@{/transactions}">Transactions</a></li>
+                    <li><a href="" th:href= "@{/contact}">Contact Us</a></li>
+                    <li><a href="" th:href= "@{/logout}">Logout</a></li>
 
                </ul>
           </nav>
