--- a/src/main/resources/templates/deposit-withdraw.html
+++ b/src/main/resources/templates/deposit-withdraw.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
      <meta charset="UTF-8">
@@ -134,11 +134,11 @@
                <h1>Bank Application</h1>
                <ul>
                     <!-- <li>Profile</li> -->
-                    <li><a href="/dashboard">Home</a></li>
-                    <li><a href="/transactions">Transactions</a></li>
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/logout">Logout</a></li>
-
+                    <li><a href="" th:href="@{/dashboard}">Home</a></li>
+                    <li><a href="" th:href="@{/transactions}">Transactions</a></li>
+                    <li><a href="" th:href="@{/contact}">Contact Us</a></li>
+                    <li><a href="" th:href="@{/logout}">Logout</a></li>
+               
                </ul>
           </nav>
      </header>
