--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -141,7 +141,7 @@
 
 
                <h3>Please Register Yourself</h3>
-               <form action="/register" method="post">
+               <form action="" th:action= "${/register}" method="post">
                     <label for="fullName"> Enter Full name </label>
                     <input type="text" name="fullName" id="fullName" required>
 
