--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
      <meta charset="UTF-8">
@@ -138,7 +138,7 @@
 
 
           <h3>Please Login Yourself</h3>
-          <form action="/login" method="post">
+          <form action="" th:action= "${/login}" method="post">
                <label for="email"> Enter Email </label>
                <input type="email" name="email" id="email" required>
 
