Fixed Jdbc issue

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -162,7 +162,7 @@
 
 
                </form>
-               <span>Already have Account?<a href="/login">Login Here</a></span>
+               <span>Already have Account?<a href="/login" th:href= "@{/login}">Login Here</a></span>
           </div>
           <div th:if="${error}" class="error-message">User Already Exists ! Please Log In</div>
 
