--- a/src/main/resources/templates/deposit-withdraw.html
+++ b/src/main/resources/templates/deposit-withdraw.html
@@ -146,7 +146,7 @@
      <div>
 
 
-          <form action="" th:action="${/deposit}" method="post" id="transactionForm">
+          <form action="" th:action="@{/deposit}" method="post" id="transactionForm">
 
                <label for="amount">Enter Amount</label><input type="number" name="" id="amount">
                <label for="pin">Enter transaction PIN</label><input type="password" name="" id="pin">
