--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -141,21 +141,21 @@
 
 
                <h3>Please Register Yourself</h3>
-               <form action="" th:action="@{/register-user}" method="post">
+               <form action="/register-user" th:action="@{/register-user}" method="post">
                     <label for="fullName"> Enter Full name </label>
-                    <input type="text" name="fullName" id="fullName" required>
+                    <input type="text" name="fullName" placeholder="Full Name" required />
 
                     <label for="email"> Enter Email </label>
-                    <input type="email" name="email" id="email" required>
+                    <input type="email" name="email" placeholder="Email" required />
 
                     <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" maxlength="10" required>
+                    <input type="text" name="mobileNumber" placeholder="Mobile Number" required />
 
                     <label for="password"> Enter Password</label>
-                    <input type="password" name="password" id="password" required>
+                    <input type="password" name="password" placeholder="Password" required />
 
                     <label for="pin"> Set Transaction PIN </label>
-                    <input type="number" name="pin" id="pin" minlength="4" required>
+                    <input type="number" name="pin" placeholder="PIN" required />
 
                     <input type="submit" name="Register" id="submit" value="Register">
                     <input type="reset" name="" id="reset">
